# flash-tasks

./: README.md  app.py  generate_tasks.py  pyproject.toml  requirements.txt  tasks.yaml
static/css/: pygments.css
tasks/: advanced-english-riding-tips.yaml  dist-systems-engineer-interview-prep.yaml  example.yaml  motorcycle-safety-prep.yaml  python-algorithms.yaml  senior-ai-agent-interview-prep.yaml
templates/: index.html
